--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+MapReduce Copy/.classpath
+MapReduce Copy/.project
+*.prefs
+MapReduce Copy/bin/MapReduce.class
+*.class
